--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,6 +44,9 @@
     
   <!-- Numbersify tracking -->
   <script data-host="https://numbersify.com" data-dnt="false" src="https://numbersify.com/js/script.js" id="ZwSg9rf6GA" async defer></script>
+  
+  <!-- Plausible tracking -->
+  <script defer data-domain="ampersandsoftworks.com" src="https://plausible.io/js/plausible.js"></script>
 
   <style>
   {% capture include_to_scssify %}
