--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -3,12 +3,13 @@ layout: default
 ---
 
 {% include hero.html %}
-
 <div class="container">
   <div class="row animate">
     {% if site.posts.size > 0 %}
       {% for post in paginator.posts %}
-        {% include article-content.html %}
+        {% if post.draft == false %}
+          {% include article-content.html %}
+        {% endif %}
       {% endfor %}
     {% endif %}
   </div>
