--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -17,14 +17,15 @@ layout: default
     </div>
   </div>
 </div>
-
 <div class="container">
   <div class="row">
     <div class="col col-12">
       <div class="contaniner__inner animate">
         <div class="row">
           {% for post in page.posts %}
-            {% include article-content.html %}
+            {% if post.draft == false %}
+              {% include article-content.html %}
+            {% endif %}
           {% endfor %}
         </div>
       </div>
