--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -3,7 +3,7 @@
     <ul class="social__list list-reset">
       {% for social in site.social %}
       <li class="social__item">
-        <a class="social__link" href="{{social.link}}" target="_blank" rel="noopener" aria-label="{{social.label}} link"><i class="ion {{social.icon}}"></i></a>
+        <a class="social__link" href="{{social.link}}" target="_blank" rel="noopener me" aria-label="{{social.label}} link"><img src="/images/icon-{{social.icon}}.svg"></a>
       </li>
       {% endfor %}
     </ul>
