--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
     <div class="row">
       <div class="col col-12">
         <div class="footer__info">
-          <div class="copyright">&copy; {{site.time | date: '%Y'}} <a href="/">brett ohland</a> <a href="https://creativecommons.org/licenses/by-sa/4.0" target="_blank">CC BY-SA 4.0</a>. Theme by <a href="https://jekyllthemes.io/developers/artem-sheludko">Artem Sheludko</a>.</div>
+          <div class="copyright"><a href="/">brett ohland</a> <a href="https://creativecommons.org/licenses/by-sa/4.0" target="_blank">CC BY-SA 4.0</a>. Theme by <a href="https://jekyllthemes.io/developers/artem-sheludko">Artem Sheludko</a>.</div>
           <div class="toggle-theme">
             <div class="toggle-moon"><i class="ion ion-ios-moon"></i></div>
             <div class="toggle-sun"><i class="ion ion-ios-sunny"></i></div>
