--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
     </main>
     <!-- end content -->
 
-    <div class="top" title="Top"><i class="ion ion-ios-arrow-round-up"></i></div>
+    <div class="top" title="Top"><img src="/images/chevron-up.png"></i></div>
 
     {% include footer.html %}
 
