--- a/_sass/3-modules/_footer.scss
+++ b/_sass/3-modules/_footer.scss
@@ -144,6 +144,9 @@
         transform: translate3d(3px, -3px, 0);
         box-shadow: -3px 3px 0 var(--brand-color);
       }
+      img {
+        filter: invert(1) saturate(0);
+      }
     }
   }
   
