--- a/_sass/3-modules/_scroll-button-top.scss
+++ b/_sass/3-modules/_scroll-button-top.scss
@@ -6,7 +6,7 @@
   width: 36px;
   height: 36px;
   font-size: 28px;
-  line-height: 39px;
+  line-height: 32px;
   text-align: center;
   border-radius: 14px;
   background-color: var(--background-alt-color);
@@ -14,6 +14,11 @@
   cursor: pointer;
   transition: all .25s ease;
   box-shadow: 0px 0px 20px rgba(0,0,0,0.05);
+
+  img {
+    width: 25px;
+    height: 25px;
+  }
 
   &:hover {
     color: var(--white);
